kclvm/parser/src/tests/snapshots/kclvm_parser__tests__expr__logic_expr_1.snap
---
source: parser/src/tests/expr.rs
expression: "crate::tests::parsing_expr_string(r####\"0 < a < 100 + a\"####)"
---
Node {
    node: Compare(
        Compare {
            left: Node {
                node: NumberLit(
                    NumberLit {
                        binary_suffix: None,
                        value: Int(
                            0,
                        ),
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 1,
            },
            ops: [
                Lt,
                Lt,
            ],
            comparators: [
                Node {
                    node: Identifier(
                        Identifier {
                            names: [
                                Node {
                                    node: "a",
                                    filename: "",
                                    line: 1,
                                    column: 4,
                                    end_line: 1,
                                    end_column: 5,
                                },
                            ],
                            pkgpath: "",
                            ctx: Load,
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 4,
                    end_line: 1,
                    end_column: 5,
                },
                Node {
                    node: Binary(
                        BinaryExpr {
                            left: Node {
                                node: NumberLit(
                                    NumberLit {
                                        binary_suffix: None,
                                        value: Int(
                                            100,
                                        ),
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 8,
                                end_line: 1,
                                end_column: 11,
                            },
                            op: Bin(
                                Add,
                            ),
                            right: Node {
                                node: Identifier(
                                    Identifier {
                                        names: [
                                            Node {
                                                node: "a",
                                                filename: "",
                                                line: 1,
                                                column: 14,
                                                end_line: 1,
                                                end_column: 15,
                                            },
                                        ],
                                        pkgpath: "",
                                        ctx: Load,
                                    },
                                ),
                                filename: "",
                                line: 1,
                                column: 14,
                                end_line: 1,
                                end_column: 15,
                            },
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 8,
                    end_line: 1,
                    end_column: 15,
                },
            ],
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 15,
}

