kclvm/parser/src/tests/snapshots/kclvm_parser__tests__expr__named_literal_expr_0.snap
---
source: parser/src/tests/expr.rs
expression: "crate::tests::parsing_expr_string(\"Undefined\")"
---
Node {
    node: NameConstantLit(
        NameConstantLit {
            value: Undefined,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 9,
}

